# tcLibraryDev

./: .gitignore  README.md  platformio.ini
adaAvrTest/: adaAvrTest.ino  adaAvrTest_menu.cpp  adaAvrTest_menu.h
adafruitDrawableTest/: adafruitDrawableTest.emf  adafruitDrawableTest.ino  adafruitDrawableTest.ino.backup  adafruitDrawableTest_menu.cpp  adafruitDrawableTest_menu.h  dashboardConfig.cpp  dashboardConfig.h  tcMenuAdaFruitGfx.cpp  tcMenuAdaFruitGfx.h
avrTestTwi/: avrTestWire.cpp
blink/: blink.cpp  segger-script.JLinkScript
cmakeEsp32/: .gitignore  README.md  generateCmake.py
cmakeEsp32/examples/tcmenu_arduino_esp32/: CMakeLists.txt  README.md  sdkconfig
cmakeEsp32/examples/tcmenu_arduino_esp32/main/: CMakeLists.txt  Esp32IdfArduino.emf  idf_component.yml  main_main.cpp  main_menu.cpp  main_menu.h  tcMenuAdaFruitGfxMono.h
cmakeProject/: CMakeLists.txt  README.md  libraries.cmake
cmakeProject/nativeExamples/: README.md
cmakeProject/nativeExamples/ControlAppOledEncoderPico/: CMakeLists.txt  ControlAppOledEncoderPico.emf  appTheme.cpp  tcmenu_main.cpp
cmakeProject/nativeExamples/ControlAppOledKeyboardWifi/: CMakeLists.txt  ControlAppOledKeyboardWifi.emf  lwipopts.h  mbedtls_config.h  tcmenu_main.cpp
cmakeProject/nativeExamples/ControlAppOledKeyboardWifi/i18n/: project-lang.properties
cmakeProject/nativeExamples/UnicodeHandlerTest/: CMakeLists.txt  main.cpp  testFont.h
cmakeProject/nativeExamples/Using1602I2C/: CMakeLists.txt  main.cpp
cmakeProject/nativeExamples/UsingCollections/: CMakeLists.txt  main.cpp
cmakeProject/nativeExamples/UsingIoAbstraction/: CMakeLists.txt  main.cpp
cmakeProject/nativeExamples/UsingMatrixKeyboard/: CMakeLists.txt  main.cpp
cmakeProject/nativeExamples/UsingSSD1306Oled/: CMakeLists.txt  main.cpp
cmakeProject/nativeExamples/UsingTaskManager/: CMakeLists.txt  main.cpp
esp32s2Keyb/: esp32s2Keyb.emf  esp32s2Keyb_main.cpp
esp8266TouchTft/: esp8266TouchTft_menu.cpp
experimental/: README.md  U8g2MbedHal.cpp  U8g2MbedHal.h  experimental.cpp  tcMenuStChromaArt.cpp  tcMenuStChromaArt.h  tcMenuU8g2.h
experimental/common/: lcd.h
experimental/esp32s2Keyb/: esp32s2Keyb.emf
experimental/esp8266TouchTft/: esp8266TouchTft.emf  esp8266TouchTft.ino  esp8266TouchTft_menu.h
experimental/ili9341/: ili9341.c  ili9341.h
experimental/stm32f429zi/: stm32_discovery.c  stm32f429i_discovery.h  stm32f429i_discovery_lcd.c  stm32f429i_discovery_lcd.h  stm32f429i_discovery_sdram.c  stm32f429i_discovery_sdram.h  stm32f4xx_hal.c  stm32f4xx_hal_ltdc.c  stm32f4xx_hal_sdram.c
experimental/u8g2test/: u8g2test.cpp
helloMbed/: helloMbed.cpp
i2cScanner/: i2cScanner.cpp
mbedAdaExample/: main.cpp
mbedMenu/: Arduino.h  MBedEthernetTransport.h  Print.h  U8g2MbedHal.cpp  U8g2MbedHal.h  mbedMenu.emf  mbedMenu_menu.cpp  mbedMenu_menu.h  tcMenuStChromaArt.cpp  tcMenuStChromaArt.h  tcmenu_main.cpp  tcmenu_main.cpp.backup
mbedMenuJava/: MBedEthernetTransport.cpp  MBedEthernetTransport.h  NTPTime.cpp  NTPTime.h  NTPTimeEvent.cpp  NTPTimeEvent.h  mbedMenu.emf  mbedMenuJava_menu.cpp  mbedMenuJava_menu.h  tcMenuAdaFruitGfx.cpp  tcMenuAdaFruitGfx.h  tcmenu_main.cpp  tcmenu_main.cpp.backup
menuArd/: CarDash.emf  Greenhouse.emf  SimhubConnector.cpp  SimhubConnector.h  menuArd.ino  menuArd.ino.backup  menuArd_menu.cpp  menuArd_menu.h  menumain.cpp  takeOverDisplay.emf
stm32eth/: stm32eth_main.cpp
test/abstractionCore/: SimpleCollectionsTest.h  test_main.cpp
test/avrSpecific/: test_main.cpp
test/taskManagerTests/: test_main.cpp
testSketch/: testSketch.ino
tftUserSetups/: ESP8266_IILI9341.h  README.md  RP2040_ILI9341.h  WroverILI9341.h  esp32s3_st7735_tiny.h
trash/: UnicodeFontHandler.cpp  UnicodeFontHandler.h  Utf8TextProcessor.cpp  Utf8TextProcessor.h  tcMenuLwipWebServer.cpp  tcMenuLwipWebServer.h  tcNetDriver_STM32_LWIP.cpp
twoEncodersMega/: twoEncoders.ino
u8g2test/: u8g2test.cpp
wroverLargeScreen/: wroverLargeScreen.emf  wroverLargeScreen.ino  wroverLargeScreen_menu.cpp  wroverLargeScreen_menu.h
xioAlarmPanel/: xioAlarmPanel.emf  xioAlarmPanel.ino  xioAlarmPanel_menu.cpp  xioAlarmPanel_menu.h
